# aegis

./: .gitignore  CMakeLists.txt  NEWS.md  README.md
apps/: CMakeLists.txt
apps/proto/aegis/: aegis.proto
apps/resource/aegis_client/: aegis_client.qrc
apps/src/aegis/: CMakeLists.txt  api.py  pyproject.toml  requirements.txt
apps/src/aegis/aegis/: __init__.py  aegis_pb2.py  aegis_pb2_grpc.py  client.py  command.py  inject.py  pyproject.toml
apps/src/aegis_app/: CMakeLists.txt  pyproject.toml  pysidedeploy.spec.in
apps/src/aegis_app/aegis_app/: __init__.py  __main__.py  attach_wizard.py  constants.py  main_window.py  rcc.py
apps/src/aegis_app/aegis_app/client/: __init__.py  attach.py  client.py
apps/src/aegis_app/aegis_app/models/: __init__.py  objects.py  properties.py
apps/src/aegis_app/aegis_app/widgets/: __init__.py
apps/src/aegis_client/: CMakeLists.txt  __init__.py  main.py  main_window.py  pyproject.toml  pysidedeploy.spec.in  requirements.txt  resource.py
apps/src/aegis_client/aegis_client/: __init__.py  application.py  main.py
apps/src/aegis_client/aegis_client/pages/: __init__.py  attach_to_process.py  client_editor.py  injection_mode_selector.py  page.py  stacked_page.py  start_new_process.py
apps/src/aegis_client/pages/: __init__.py  attach_to_process.py  client_editor.py  injection_mode_selector.py  page_with_back.py  run_and_attach.py  select_attach_strategy.py  start_new_process.py
apps/src/aegis_console/: CMakeLists.txt  pyproject.toml  pysidedeploy.spec.in
apps/src/aegis_console/aegis_console/: __init__.py  application.py  main.py  rcc.py
apps/src/aegis_console/aegis_console/pages/: __init__.py  attach_to_process.py  client_editor.py  injection_mode_selector.py  page.py  stacked_page.py  start_new_process.py
apps/src/aegis_ide/: CMakeLists.txt  application.py  main.py  main_window.py  pyproject.toml  pysidedeploy.spec.in
apps/src/aegis_ide/aegis_ide/: __init__.py  application.py  main.py
apps/src/client/: CMakeLists.txt  main.py  requirements.txt
apps/src/client/extended/: application.py  main_window.py  rcc.py
apps/src/client/simple/: __init__.py  main_window.py
apps/src/client/simple/pages/: __init__.py  client.py
cmake/: aegis-config-dependencies.cmake.in  aegis-config.cmake.in  config.cmake  macros.cmake
docs/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt
examples/include/server/: application.h  main_window.h
examples/resource/server/: server.qrc
examples/src/server/: CMakeLists.txt  application.cpp  main.cpp  main_window.cpp
modules/: CMakeLists.txt
modules/include/: config.h  config.h.in
modules/include/aegis/: client.h  config.h  config.h.in  export.h  manager.h  module.h  response.h  serializer.h  server.h  sniffer.h
modules/include/aegis/command/: children.h  command.h  dump_methods.h  dump_properties.h  executor.h  find.h  help.h  invoke_method.h  parent.h  record.h  set_property.h  sniffer.h
modules/include/aegis/mark/: marker.h  widget_marker.h  widget_tooltip.h
modules/include/aegis/observe/: action.h  observer.h
modules/include/aegis/record/: action.h  recorder.h  strategy.h
modules/include/aegis/search/: query.h  searcher.h  strategy.h  utils.h
modules/include/aegis/server/: call.h  server.h  service.h
modules/include/aegis/service/: marker.h  object.h  recorder.h  searcher.h  sniffer.h  utils.h
modules/include/aegis/sniff/: sniffer.h  widget_marker.h  widget_tooltip.h
modules/proto/aegis/: aegis.proto
modules/resource/aegis/: aegis.qrc
modules/src/aegis/: CMakeLists.txt  client.cpp  inject.cpp  manager.cpp  module.cpp  serializer.cpp  server.cpp  sniffer.cpp
modules/src/aegis/command/: children.cpp  command.cpp  dump_methods.cpp  dump_properties.cpp  executor.cpp  find.cpp  help.cpp  invoke_method.cpp  parent.cpp  record.cpp  set_property.cpp  sniffer.cpp
modules/src/aegis/mark/: marker.cpp  widget_marker.cpp  widget_tooltip.cpp
modules/src/aegis/observe/: action.cpp  observer.cpp
modules/src/aegis/record/: action.cpp  recorder.cpp  strategy.cpp
modules/src/aegis/search/: query.cpp  searcher.cpp  strategy.cpp  utils.cpp
modules/src/aegis/server/: call.cpp  server.cpp
modules/src/aegis/service/: marker.cpp  object.cpp  recorder.cpp  searcher.cpp  sniffer.cpp  utils.cpp
modules/src/aegis/sniff/: sniffer.cpp  widget_marker.cpp  widget_tooltip.cpp
proto/aegis/: aegis.proto
